Test Org - Speridian/src/objects/BA_Benefit_Details__c.object
<CustomObject>
    <fields>
        <fullName>ba_AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Age__c</fullName>
        <label>Age</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_BenefitName__c</fullName>
        <label>Benefit Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Coinsurance__c</fullName>
        <label>Coinsurance</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Copay__c</fullName>
        <label>Copay</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DeductibleFamily__c</fullName>
        <label>Deductible Family</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DeductibleIndividual__c</fullName>
        <label>Deductible Individual</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Liability__c</fullName>
        <label>Liability</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Limit__c</fullName>
        <label>Limit</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Network__c</fullName>
        <label>Network</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_OOPMAXFamily__c</fullName>
        <label>OOP MAX Family</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_OOPMaxIndividual__c</fullName>
        <label>OOP Max Individual</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PlaceOfService__c</fullName>
        <label>Place Of Service</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Benefit Details</label>
    <nameField>
        <displayFormat>BID-{0000}</displayFormat>
        <label>Benefit Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>